Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <formula>SBQQ__MasterContract__r.Approval_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>