Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Term_Version__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Version__c</fullName>
    <formula>TEXT( SBQQ__Account__r.Contract_Term_Version__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Master Term Version</label>
    <type>Text</type>
</CustomField>