Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <formula>TEXT(SBQQ__MasterContract__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>