Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Corrective_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corrective Amendment</label>
    <type>Checkbox</type>
</CustomField>