Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/coterm_date__c.field-meta.xml
<CustomField>
    <fullName>coterm_date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please add date to special comments field</inlineHelpText>
    <label>Coterm Date</label>
    <type>Checkbox</type>
</CustomField>