Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Count_Of_Quotelines__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Quotelines__c</fullName>
    <description>BIZ-50905</description>
    <label>Count Of Quotelines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>