Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/counter_fo_allert__c.field-meta.xml
<CustomField>
    <fullName>counter_fo_allert__c</fullName>
    <label>counter for allert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>