Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/CPO__c.field-meta.xml
<CustomField>
    <fullName>CPO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as apart of story BIZ-47951
Approval story</description>
    <label>CPO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuotesItM1</relationshipName>
    <type>Lookup</type>
</CustomField>