Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Created_By_Profile__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Profile__c</fullName>
    <description>Used in custom action to show products based on profiles</description>
    <formula>$Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Profile</label>
    <type>Text</type>
</CustomField>