Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Created_Date_International__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_International__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(CreatedDate)))&amp;&quot;-&quot;&amp;
CASE(TEXT(MONTH(DATEVALUE(CreatedDate))),
  &quot;1&quot;,&quot;Jan&quot;,
  &quot;2&quot;,&quot;Feb&quot;,
  &quot;3&quot;,&quot;Mar&quot;,
  &quot;4&quot;,&quot;Apr&quot;,
  &quot;5&quot;,&quot;May&quot;,
  &quot;6&quot;,&quot;Jun&quot;,
  &quot;7&quot;,&quot;Jul&quot;,
  &quot;8&quot;,&quot;Aug&quot;,
  &quot;9&quot;,&quot;Sep&quot;,
  &quot;10&quot;,&quot;Oct&quot;,
  &quot;11&quot;,&quot;Nov&quot;,
  &quot;12&quot;,&quot;Dec&quot;,
  &quot;Error&quot;
)&amp;&quot;-&quot;&amp;RIGHT(TEXT(YEAR(DATEVALUE(CreatedDate))),2)</formula>
    <label>Created Date (International)</label>
    <type>Text</type>
</CustomField>