Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Credit_Memo_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Reason__c</fullName>
    <label>Credit Memo Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Credit for Superseded</fullName>
            </value>
            <value>
                <fullName>Intapp concession</fullName>
            </value>
            <value>
                <fullName>Legacy SKUs</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Re-invoice: error</fullName>
            </value>
            <value>
                <fullName>Sales tax adjustment only</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
            <value>
                <fullName>Billing or Payment Change</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Bill Freq change current term only</fullName>
                <isActive>false</isActive>
                <label>Bill Freq change current term only</label>
            </value>
            <value>
                <fullName>Billing Freq change current term only</fullName>
                <isActive>false</isActive>
                <label>Billing Freq change current term only</label>
            </value>
            <value>
                <fullName>Billing Pause</fullName>
                <isActive>false</isActive>
                <label>Billing Pause</label>
            </value>
            <value>
                <fullName>CG Data Migration</fullName>
                <isActive>false</isActive>
                <label>CG Data Migration</label>
            </value>
            <value>
                <fullName>CG PreArm to Arm</fullName>
                <isActive>false</isActive>
                <label>CG PreArm to Arm</label>
            </value>
            <value>
                <fullName>Cancellation - Previous Period</fullName>
                <isActive>false</isActive>
                <label>Cancellation - Previous Period</label>
            </value>
            <value>
                <fullName>Contract terms change</fullName>
                <isActive>false</isActive>
                <label>Contract terms change</label>
            </value>
            <value>
                <fullName>Credit Unbilled Time</fullName>
                <isActive>false</isActive>
                <label>Credit Unbilled Time</label>
            </value>
            <value>
                <fullName>Currency Change</fullName>
                <isActive>false</isActive>
                <label>Currency Change</label>
            </value>
            <value>
                <fullName>Customer cancellation</fullName>
                <isActive>false</isActive>
                <label>Customer cancellation</label>
            </value>
            <value>
                <fullName>Early Pay Discount</fullName>
                <isActive>false</isActive>
                <label>Early Pay Discount</label>
            </value>
            <value>
                <fullName>Intapp cancellation</fullName>
                <isActive>false</isActive>
                <label>Intapp cancellation</label>
            </value>
            <value>
                <fullName>OTD Discount Allocation</fullName>
                <isActive>false</isActive>
                <label>OTD Discount Allocation</label>
            </value>
            <value>
                <fullName>One Time Credit</fullName>
                <isActive>false</isActive>
                <label>One Time Credit</label>
            </value>
            <value>
                <fullName>Payment Adjustment Split</fullName>
                <isActive>false</isActive>
                <label>Payment Adjustment Split</label>
            </value>
            <value>
                <fullName>Re-Bill Payment term amendment</fullName>
                <isActive>false</isActive>
                <label>Re-Bill Payment term amendment</label>
            </value>
            <value>
                <fullName>Re-invoice: rev rec period change</fullName>
                <isActive>false</isActive>
                <label>Re-invoice: rev rec period change</label>
            </value>
            <value>
                <fullName>SFA Change</fullName>
                <isActive>false</isActive>
                <label>SFA Change</label>
            </value>
            <value>
                <fullName>Write-off Financial Breach</fullName>
                <isActive>false</isActive>
                <label>Write-off Financial Breach</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>