Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/CRM_Program__c.field-meta.xml
<CustomField>
    <fullName>CRM_Program__c</fullName>
    <description>CRM Program</description>
    <label>CRM Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition - Repstor</fullName>
            </value>
            <value>
                <fullName>Acquisition - Billstream</fullName>
            </value>
            <value>
                <fullName>Billstream - Legacy Contract Replacement</fullName>
            </value>
            <value>
                <fullName>DC Retention Program</fullName>
            </value>
            <value>
                <fullName>Relationship Intelligence</fullName>
            </value>
            <value>
                <fullName>Walls Special Program</fullName>
            </value>
            <value>
                <fullName>Services SPIF Program</fullName>
            </value>
            <value>
                <fullName>Managed Services Marketing Campaign</fullName>
            </value>
            <value>
                <fullName>Exec Deal Sponsorship</fullName>
            </value>
            <value>
                <fullName>Services Demand Generation</fullName>
            </value>
            <value>
                <fullName>CSS Services Upsell</fullName>
            </value>
            <value>
                <fullName>Acquisition – Polar</fullName>
            </value>
            <value>
                <fullName>DealCloud Sprint</fullName>
            </value>
            <value>
                <fullName>Acquisition – delphai</fullName>
            </value>
            <value>
                <fullName>Acquisition – TDI</fullName>
            </value>
            <value>
                <fullName>Time Migration</fullName>
            </value>
            <value>
                <fullName>Acquisition - TermSheet</fullName>
            </value>
            <value>
                <fullName>Compliance Desk</fullName>
            </value>
            <value>
                <fullName>MYOP</fullName>
            </value>
            <value>
                <fullName>DCMi</fullName>
                <isActive>false</isActive>
                <label>DCMi</label>
            </value>
            <value>
                <fullName>DealCloud Blue</fullName>
                <isActive>false</isActive>
                <label>DealCloud Blue</label>
            </value>
            <value>
                <fullName>Price Realization</fullName>
                <isActive>false</isActive>
                <label>Price Realization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>