Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/CRO__c.field-meta.xml
<CustomField>
    <fullName>CRO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Developed as part of ticket BIZ-46024</description>
    <label>CRO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes9</relationshipName>
    <type>Lookup</type>
</CustomField>