Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Custom_Master_Term__c.field-meta.xml
<CustomField>
    <fullName>Custom_Master_Term__c</fullName>
    <label>Custom Master Term</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>