Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Custom_Software_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Custom_Software_Payment_Term__c</fullName>
    <description>Custom text field used to enter custom software payment terms if non standard terms are required.
Built according to user story BIZ-45111, BIZ-47432</description>
    <label>Custom Software Payment Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>