Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/D_b__c.field-meta.xml
<CustomField>
    <fullName>D_b__c</fullName>
    <description>Created to make this field non editable BIZ-49895</description>
    <formula>D_B_Related__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D&amp;b</label>
    <type>Checkbox</type>
</CustomField>