Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/D_B_Language__c.field-meta.xml
<CustomField>
    <fullName>D_B_Language__c</fullName>
    <formula>&quot;Integration Appliance, Inc. (\&quot;Intapp\&quot;) software and services are provided to Customer solely in accordance with and subject to the Intapp General Terms and Conditions associated with Order and Sale Agreement #&quot;&amp;SBQQ__Account__r.Master_Terms_Contract_Number__r.ContractNumber &amp;&quot; &quot;&amp;&quot;and the enclosed D&amp;B Customer Terms.&quot;</formula>
    <label>D&amp;B Language</label>
    <type>Text</type>
</CustomField>