Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Data_Risk_Count__c.field-meta.xml
<CustomField>
    <fullName>Data_Risk_Count__c</fullName>
    <description>Store count of Data-Risk Family products. Created as part of BIZ-45125.</description>
    <label>Data - Risk Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>