Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_ACV__c.field-meta.xml
<CustomField>
    <fullName>Deal_ACV__c</fullName>
    <label>ACV Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>