Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Checklist_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Checklist_Status__c</fullName>
    <description>Field to show the status of the deal closure checklist , edited as per BIZ-48431
Edited as per BIZ-49979</description>
    <formula>IF( OR(ISBLANK( Validation_Checklist__c ), ( Validation_Checklist__r.Contract_Verified__c = false))  , &apos;Not Started&apos;, &apos;Completed&apos;)</formula>
    <label>Deal Checklist Status</label>
    <type>Text</type>
</CustomField>