Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/DealCloud_Prime_Count__c.field-meta.xml
<CustomField>
    <fullName>DealCloud_Prime_Count__c</fullName>
    <description>Created as part of BIZ-51883</description>
    <label>DealCloud Prime Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>