Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/DealCloud_Total_Year1__c.field-meta.xml
<CustomField>
    <fullName>DealCloud_Total_Year1__c</fullName>
    <description>Used to calculate total for Quote Lines having Product Family DealCloud.
Created as part of BIZ-45145</description>
    <label>DealCloud Total Year1</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Family_Value__c</field>
        <operation>equals</operation>
        <value>DealCloud</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>