Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Disable_RL_PDF_Generation__c.field-meta.xml
<CustomField>
    <fullName>Disable_RL_PDF_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used for preventing the Conga Callout for PDF Generation that happens after RL is created</description>
    <inlineHelpText>Check this flog to disable the Renewal Letter PDF Generation</inlineHelpText>
    <label>Disable RL PDF Generation</label>
    <type>Checkbox</type>
</CustomField>