Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Discounted_Software_Products__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Software_Products__c</fullName>
    <label>Discounted Software Products</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__AdditionalDiscount__c</field>
        <operation>notEqual</operation>
        <value>,0</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>