Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Early_Termination__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination__c</fullName>
    <label>Early Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 Percent</fullName>
            </value>
            <value>
                <fullName>5 Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>