Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Effective_Date_Display__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Display__c</fullName>
    <formula>IF(
  ISBLANK(SBQQ__StartDate__c),
  &quot;_________________________&quot;,
  TEXT(ROUND(DAY(SBQQ__StartDate__c),0))&amp;
  &quot;-&quot;&amp;
  CASE(MONTH(SBQQ__StartDate__c),
    1,&quot;Jan&quot;,
    2,&quot;Feb&quot;,
    3,&quot;Mar&quot;,
    4,&quot;Apr&quot;,
    5,&quot;May&quot;,
    6,&quot;Jun&quot;,
    7,&quot;Jul&quot;,
    8,&quot;Aug&quot;,
    9,&quot;Sep&quot;,
    10,&quot;Oct&quot;,
    11,&quot;Nov&quot;,
    12,&quot;Dec&quot;,
    &quot;&quot;
  )&amp;
  &quot;-&quot;&amp;
  RIGHT(TEXT(ROUND(YEAR(SBQQ__StartDate__c),0)),2) 
)</formula>
    <label>Effective Date Display</label>
    <type>Text</type>
</CustomField>