Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Engagement_Model__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Model__c</fullName>
    <description>Engagement Model of the Account</description>
    <formula>TEXT(SBQQ__Account__r.CSM_Engagement_Model__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Model</label>
    <type>Text</type>
</CustomField>