Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Exceptional_Approver__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Approver__c</fullName>
    <description>Build as a part of story BIZ-46142</description>
    <label>Exceptional Approver</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>