Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Exclude_from_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate the contract should auto-renew or not. Created w.r.t BIZ-72045</description>
    <inlineHelpText>Select this if the contract should not auto-renew. The flag flows from Quote to Contract and disables auto-renewal.</inlineHelpText>
    <label>Exclude from Auto-Renewal?</label>
    <type>Checkbox</type>
</CustomField>