Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Exclude_Product_Specific_Language__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Product_Specific_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want to exclude product specific terms. An example would be in the case of license band uplifts.</inlineHelpText>
    <label>Exclude Product Specific Language</label>
    <type>Checkbox</type>
</CustomField>