Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Existing_Master_Terms_Language_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Existing_Master_Terms_Language_Cloud__c</fullName>
    <formula>&quot;Integration Appliance, Inc.(\&quot;Intapp\&quot;) software and services are provided to Customer solely in accordance with and subject to the Intapp General Terms and Conditions associated with Order and Sale Agreement #&quot;&amp;SBQQ__Account__r.Master_Terms_Contract_Number__r.ContractNumber&amp;&quot; as well as the Intapp Cloud Services Addendum attached hereto.&quot;</formula>
    <label>Existing Master Terms Language Cloud</label>
    <type>Text</type>
</CustomField>