Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Expected_Signaure_Date_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Signaure_Date_Booking_Date__c</fullName>
    <label>Expected Signature Date / Booking Date</label>
    <type>Date</type>
</CustomField>