Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Expires_On_formula__c.field-meta.xml
<CustomField>
    <fullName>Expires_On_formula__c</fullName>
    <description>Field created to help automation of Quote Lines for Services Credit Description</description>
    <formula>SBQQ__Opportunity2__r.Requested_Contract_Expiration__c</formula>
    <label>Expires On (formula)</label>
    <type>Date</type>
</CustomField>