Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Extended_Terms_Language__c.field-meta.xml
<CustomField>
    <fullName>Extended_Terms_Language__c</fullName>
    <formula>&quot;The Initial Term of this Order and Sale Agreement &quot;&amp;SBQQ__MasterContract__r.ContractNumber&amp;&quot; (\&quot;OSA\&quot;) shall commence upon the Effective Date of this OSA and continue for a &quot;&amp;TEXT(SBQQ__SubscriptionTerm__c)&amp;&quot; month term. Thereafter, each Renewal Term of this OSA, if any, shall run for an annual term and will be subject to the General Terms and Conditions.&quot;</formula>
    <label>Extended Terms Language</label>
    <type>Text</type>
</CustomField>