Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Extended_Terms_without_Discount__c.field-meta.xml
<CustomField>
    <fullName>Extended_Terms_without_Discount__c</fullName>
    <formula>AND(
  Extended_Initial_Term__c,
  NOT(Has_Discount_Products__c)
)</formula>
    <label>Extended Terms without Discount</label>
    <type>Checkbox</type>
</CustomField>