Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/First_section_Approval__c.field-meta.xml
<CustomField>
    <fullName>First_section_Approval__c</fullName>
    <description>Field created to tract the approval of 1st section before sending to CRO and COO for final approval</description>
    <label>First section Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>